# RLLxLerobot

./: .gitignore  README.md  environment.sh
config/: 99-usb-camera.rules
doc/: 00-infra-overview.md  01-lerobot-piper-plugin.md  02-phase1-piper-follower.md  03-phase2-robotis-leader.md  04-phase3-dual-camera.md  05-phase4-dual-arm-teleop.md  06-phase5-diffusion-policy.md  07-phase6-pi0fast.md  08-openpi-evaluation.md  08-phase7-smolvla.md  report.md
plugins/lerobot-teleoperator-keypad/: pyproject.toml
plugins/lerobot-teleoperator-keypad/lerobot_teleoperator_keypad/: __init__.py  config_keypad_joint.py  keypad_joint.py
plugins/lerobot-teleoperator-robotis/: pyproject.toml
plugins/lerobot-teleoperator-robotis/lerobot_teleoperator_robotis/: __init__.py  bi_robotis_leader.py  config_bi_robotis_leader.py  config_robotis_leader.py  robotis_leader.py  subprocess_leader.py
scripts/: 0_can_up.sh  2_record_leader.sh  2_record_leader_cam.sh  2_record_leader_cam_gui.sh  2_replay_episode.sh  2_replay_episode_cam.sh  2_teleoperate_leader.sh  2_verify_dataset.sh  2_verify_dataset_cam.sh  2_viz_dataset_cam.sh  3_benchmark_latency.py  3_record_dual_cam.sh  3_teleoperate_dual_cam.sh  3_teleoperate_dual_cam_gui.sh  3_teleoperate_dual_cam_mjpg.sh  3_teleoperate_dual_cam_yuyv.sh  3_teleoperate_single_cam.sh  4_teleoperate_bimanual.sh  5_eval_diffusion.sh  5_eval_diffusion_custom.py  5_record_pick_cube.sh  5_replay_eval.sh  5_train_diffusion.sh  5_train_diffusion_custom.py  6_eval_pi0fast.sh  6_train_pi0fast.sh  7_eval_smolvla.sh  7_eval_smolvla_piper.sh  7_record_smolvla.sh  (+5 more)
(+21 files in other folders)
