[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_teleoperator_robotis"
version = "0.1.0"
description = "ROBOTIS OMY-L100 leader arm teleoperator for LeRobot (dynamixel_sdk direct read)"
requires-python = ">=3.10"
dependencies = [
    "dynamixel-sdk",
    "numpy",
]
